# siebdruck

./: .env.example  .gitignore  pyproject.toml
assets/: deadsea_gap.geojson  deadsea_pans.geojson  deadsea_south.geojson  font_creator_cells.json  squared_cells.json
designs/6 20 18 20 20 19/: generate.py
designs/font_creator/: generate.py
designs/hydrographic/: generate.py
designs/pal_48/: generate.py
designs/pal_cities/: generate.py
designs/squared/: generate.py
shared/: common.py  env.py
